
      \item TODO: move protein.equil() example (previously in equilibrium.Rnw) to JMDplots.

      \item TODO: change add.obigt --> add.OBIGT on website (Fe-O-H-S example) when package is submitted to CRAN.

      \item TODO: move extdata/bison to JMDplots package.

      \item TODO: remove extdata/refseq (now in JMDplots).

      \item TODO: OBIGT.Rmd: change "CHNOSZ" references to "OBIGT".

    }
  }

}

\section{Changes in CHNOSZ version 1.3.6 (2020-03-16)}{
  \itemize{

    \item Fix for R-devel (4.0.0): test-add.protein.R had a test that failed
      with new stringsAsFactors = FALSE default for read.table().

  }
}

\section{Changes in CHNOSZ version 1.3.5 (2020-02-16)}{
  \itemize{

    \item Fix for R-devel (4.0.0): remove documentation for unused argument
      '...' in add.protein.Rd.

  }
}

\section{Changes in CHNOSZ version 1.3.4 (2019-12-15)}{

  \subsection{THERMODYNAMIC DATA}{
    \itemize{
      \item Change data for dawsonite, scheelite, and ferberite from calories to
        Joules (as originally reported).

      \item Use correct Cp coefficients for ferberite (2nd term in equation of
        Wood and Samson, 2000 is off by a factor of 10). Thanks to Xiangchong
        Liu and David Polya for the bug report and assistance.

      \item Move more carbonates from SUPCRT92 back into the default database:
        artinite, azurite.
    }
  }

  \subsection{DIAGRAMS}{
    \itemize{
      \item Improve the handling of solids in equilibrate(). They are now excluded
        from the equilibrium calculation, but their stability fields are
        calculated using the maximum affinity method (with diagram()). Where
        solids are stable, logarithms of activities of aqueous species are set
        to -999, and vice versa. Thanks to Feng Lai for the request and test
        case.
    }
  }

  \subsection{PACKAGE CLEANUP}{
    \itemize{
      \item Remove files Sce.csv.xz and yeastgfp.csv.xz and functions yeastgfp()